tests/compile/fail/invalid-struct-primitive.stderr
error: Only `u128` primitive type is supported.
  --> $DIR/invalid-struct-primitive.rs:15:11
   |
15 | struct Id(u64);
   |           ^^^
